# Graph_lib

./: .gitignore  .portpal.toml  AGENTS.md  CLAUDE.md  CMakeLists.txt  GOALS.md  Graph.cpp  Graph.hpp  GraphAlgo.hpp  README.md  Symbol.hpp  drawGraph.cpp  graph_test.cpp  graph_test_program.cpp  runBuild  runDrawDotGraph.sh  runTest
Test/: CMakeLists.txt
data/: NoCycle.txt  tingyDG.dot  tinyCG.dot  tinyG.dot  tinyG.txt
lean4/: GraphLib.lean  lake-manifest.json  lakefile.toml
lean4/GraphLib/Core/: Basic.lean
lean4/GraphLib/GraphAlgorithms/: Basic.lean
plans/: architecture.md
